# prompt-test

./: .env  .gitignore  README.md  app.py  demo.py  install_uv.sh  pyproject.toml
prompt/: prompt-example.md
static/: index.html  script.js  style.css
